Fix QMenu position on a multi-display system

Ensure that the point QPushButtonPrivate::adjustedMenuPosition() returns
is on the same screen with the button

Task-number: QTBUG-57689
Change-Id: If611d41fff4c72ae16369fd95bc5159f398894e9
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>